# knn_baseline

./: Baseline  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cudaopt.cu  cudaopt.h  data.cpp  data.h  hashFunc.cpp  hashFunc.h  knn.cpp  knn.h  lsh  lsh.cpp  lsh.h  main.cpp  main.cu  main.h  matrixMulCPU.cu  matrixMulCPU.h  matrixMulGPU.cu  matrixMulGPU.h  sort.cpp  sort.h  start_experiment.py  util.cpp  util.h  v_lsh  v_lsh.cpp  v_lsh.h
data/: sigMatrix.txt
